Fix firefox wrap and opaque text selection

--- a/src/components/paint-editor/paint-editor.css
+++ b/src/components/paint-editor/paint-editor.css
@@ -170,10 +170,10 @@ $border-radius: 0.25rem;
     display: none;
     outline: none;
     overflow: hidden;
+    opacity: .8;
     padding: 0px;
     position: absolute;
     resize: none;
-    white-space: nowrap;
     margin: 0px;
     -webkit-text-fill-color: transparent;
     text-fill-color: transparent;
